# TrajectoryFlow

./: .gitignore  LICENSE  README.md  pyproject.toml
scripts/: download_scifate2.py
src/trajectoryflow/data/: __init__.py  core_dataset.py  labled_dense_matrix.py  labled_distance_matrix.py  labled_sparse_matrix.py  scifate_dataset.py  torch_scifate_dataset.py
tutorials/: 01_loading_and_working_with_data.ipynb  02_dataset_exploration.py
tutorials/tutorials/: 02_torch_dataset.py
